# marchmathness

./: .gitignore  README.md  pyproject.toml  readable_output.csv  readable_output_advanced.csv
2024/: 2024_win_probability_matrix.json  march-madness-2024.ipynb
2025/: 2025_win_win_probability_matrix.json  derive.ipynb  derivev2.ipynb  marchmathness.ipynb
2026/: marchmathness.ipynb
archive/: bracketize.py  process.py
data/: TeamSpellings.csv  id_to_team.json  kenpom.csv  saved_nn  saved_nn_scalerX  stats.json
kenpom/: kenpom_2011-2024.csv  kenpom_2025-03-19.csv  kenpom_2025.csv  manual_team_spellings.csv
src/: bracketize.py  featurize.py  main.py  marchine.py  predict.py  process.py
